--- a/ReviewsSite/Views/Park/Edit.cshtml
+++ b/ReviewsSite/Views/Park/Edit.cshtml
@@ -1,7 +1,8 @@
 ﻿@model ReviewsSite.Models.Park
+@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 
 @{
-    Layout = null;
+    ViewData["Title"] = "Edit";
 }
 
 <!DOCTYPE html>
@@ -13,46 +14,47 @@
 </head>
 <body>
 
-<h4>Park</h4>
-<hr />
-<div class="row">
-    <div class="col-md-4">
-        <form asp-action="Edit">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <input type="hidden" asp-for="Id" />
-            <div class="form-group">
-                <label asp-for="Name" class="control-label"></label>
-                <input asp-for="Name" class="form-control" />
-                <span asp-validation-for="Name" class="text-danger"></span>
-            </div>
-            <div class="form-group form-check">
-                <label class="form-check-label">
-                    <input class="form-check-input" asp-for="HasHandicapAccess" /> @Html.DisplayNameFor(model => model.HasHandicapAccess)
-                </label>
-            </div>
-            <div class="form-group form-check">
-                <label class="form-check-label">
-                    <input class="form-check-input" asp-for="IsDogFriendly" /> @Html.DisplayNameFor(model => model.IsDogFriendly)
-                </label>
-            </div>
-            <div class="form-group">
-                <label asp-for="ParkType" class="control-label"></label>
-                <input asp-for="ParkType" class="form-control" />
-                <span asp-validation-for="ParkType" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-primary" />
-            </div>
-        </form>
+    <h4>Park</h4>
+    <hr />
+    <div class="row">
+        @Model.Name
+        <div class="col-md-4">
+            <form asp-action="Edit">
+                <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+                <input type="hidden" asp-for="Id" />
+                <div class="form-group">
+                    <label asp-for="Name" class="control-label"></label>
+                    <input asp-for="Name" class="form-control" />
+                    <span asp-validation-for="Name" class="text-danger"></span>
+                </div>
+                <div class="form-group form-check">
+                    <label class="form-check-label">
+                        <input class="form-check-input" asp-for="HasHandicapAccess" /> @Html.DisplayNameFor(model => model.HasHandicapAccess)
+                    </label>
+                </div>
+                <div class="form-group form-check">
+                    <label class="form-check-label">
+                        <input class="form-check-input" asp-for="IsDogFriendly" /> @Html.DisplayNameFor(model => model.IsDogFriendly)
+                    </label>
+                </div>
+                <div class="form-group">
+                    <label asp-for="ParkType" class="control-label"></label>
+                    <input asp-for="ParkType" class="form-control" />
+                    <span asp-validation-for="ParkType" class="text-danger"></span>
+                </div>
+                <div class="form-group">
+                    <input type="submit" value="Save" class="btn btn-primary" />
+                </div>
+            </form>
+        </div>
     </div>
-</div>
 
-<div>
-    <a asp-action="Index">Back to List</a>
-</div>
+    <div>
+        <a asp-action="Index">Back to List</a>
+    </div>
 
-@section Scripts {
-    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
-}
+    @section Scripts {
+        @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+    }
 </body>
 </html>
