--- a/ReviewsSite/Views/Review/Details.cshtml
+++ b/ReviewsSite/Views/Review/Details.cshtml
@@ -10,30 +10,39 @@
     <h4>Review</h4>
     <hr />
     <dl class="row">
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Park)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Park.Id)
         </dd>
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.ReviewerName)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.ReviewerName)
         </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Comment)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Comment)
-        </dd>
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.StarRating)
         </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.StarRating)
+        <dd class="col-sm-10">
+            @*@Html.DisplayFor(model => model.StarRating)*@
+            @for (int i = 0; i < Model.StarRating; i++)
+            {
+                <img src="~/icon/star.png" alt="stars" style="width:24px;" />
+            }
+            @for (int i = 0; i < 5 - Model.StarRating; i++)
+            {
+                <img src="~/icon/emptystar.png" alt="empty stars" style="width:24px;" />
+            }
         </dd>
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.Comment)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.Comment)
+        </dd>
+
     </dl>
 </div>
 <div>
