--- a/ReviewsSite/Views/Review/Create.cshtml
+++ b/ReviewsSite/Views/Review/Create.cshtml
@@ -13,8 +13,9 @@
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
-                <label asp-for="ParkId" class="control-label"></label>
-                <select asp-for="ParkId" class ="form-control" asp-items="ViewBag.ParkId"></select>
+                <label asp-for="Park.Name" class="control-label"></label>
+                <select asp-for="ParkId" class="form-control" asp-items="ViewBag.Parks"></select>
+                <span asp-validation-for="ParkId" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="ReviewerName" class="control-label"></label>
