--- a/ReviewsSite/Views/Review/Edit.cshtml
+++ b/ReviewsSite/Views/Review/Edit.cshtml
@@ -14,8 +14,8 @@
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="Id" />
             <div class="form-group">
-                <label asp-for="ParkId" class="control-label"></label>
-                <select asp-for="ParkId" class="form-control" asp-items="ViewBag.ParkId"></select>
+                <label asp-for="Park.Name" class="control-label"></label>
+                <select asp-for="ParkId" class="form-control" asp-items="ViewBag.Parks"></select>
                 <span asp-validation-for="ParkId" class="text-danger"></span>
             </div>
             <div class="form-group">
