--- a/ReviewsSite/Views/Review/Index.cshtml
+++ b/ReviewsSite/Views/Review/Index.cshtml
@@ -31,7 +31,7 @@
 @foreach (var item in Model) {
         <tr>
             <td>
-                @Html.DisplayFor(modelItem => item.Park.Id)
+                @Html.DisplayFor(modelItem => item.Id)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.ReviewerName)
