--- a/ReviewsSite/Views/Review/Delete.cshtml
+++ b/ReviewsSite/Views/Review/Delete.cshtml
@@ -15,7 +15,7 @@
             @Html.DisplayNameFor(model => model.Park)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Park.Id)
+            @Html.DisplayFor(model => model.Park.Name)
         </dd class>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.ReviewerName)
