--- a/ReviewsSite/Views/Review/Index.cshtml
+++ b/ReviewsSite/Views/Review/Index.cshtml
@@ -40,7 +40,14 @@
                 @Html.DisplayFor(modelItem => item.Comment)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.StarRating)
+                @for (int i = 0; i < item.StarRating; i++)
+                {
+                    <img src="~/icon/star.png" alt="stars" style="width:24px;" />
+                }
+                @for (int i = 0; i < 5 - item.StarRating; i++)
+                {
+                    <img src="~/icon/emptystar.png" alt="empty stars" style="width:24px;" />
+                }
             </td>
             <td>
                 <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
