Adding message after creating park and review

--- a/ReviewsSite/Views/_ViewImports.cshtml
+++ b/ReviewsSite/Views/_ViewImports.cshtml
@@ -1,1 +1,3 @@
-﻿@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+﻿@using ReviewsSite
+@using ReviewsSite.Models
+@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
