--- a/ReviewsSite/Views/Park/Detail.cshtml
+++ b/ReviewsSite/Views/Park/Detail.cshtml
@@ -39,5 +39,6 @@
 </div>
 <div>
     <a asp-action="Edit" asp-route-id="@Model.Id">Edit</a> |
+    <a href="/Review/Create">Add a Review</a> |
     <a asp-action="Index">Back to List</a>
 </div>
