--- a/ReviewsSite/Views/Review/Create.cshtml
+++ b/ReviewsSite/Views/Review/Create.cshtml
@@ -15,9 +15,9 @@
             <div class="form-group">
                 <label asp-for="Park.Name" class="control-label"></label>
 
-                <select asp-for="ParkId" class ="form-control" asp-items="ViewBag.Parks"></select>
+                <select asp-for="ParkId" class="form-control" asp-items="ViewBag.Parks"></select>
                 <span asp-validation-for="ParkId" class="text-danger"></span>
-
+                <p> Don't see the park you want to review? <br /> Add it <a href="/Park/Create">here</a></p>  
             </div>
             <div class="form-group">
                 <label asp-for="ReviewerName" class="control-label"></label>
@@ -41,8 +41,8 @@
     </div>
 </div>
 
+<a asp-action="Index">Back to List</a>
 <div>
-    <a asp-action="Index">Back to List</a>
 </div>
 
 @section Scripts {
