--- a/ReviewsSite/Views/Home/Index.cshtml
+++ b/ReviewsSite/Views/Home/Index.cshtml
@@ -12,22 +12,26 @@
 <body>
     <section class="intro" id="index">
         <h1 class="section__title section__title--index">
-            Welcome to my Code Blooded Park Review Site
+            Welcome to my <span>Code </span><span>Blooded</span> Park Review Site
         </h1>
 
         <section class="subtitle" id="subtitle">
             <h4>By Cleveland for Cleveland</h4>
         </section>
+        <div class="grid-2">
+            <div>
+                <img src="/Imgs/edgewater.jpg" alt="d"
+                     class="index__img">
 
-        <img src="/Imgs/edgewater.jpg" alt="d"
-             class="index__img">
-
-
-        <section class="intro-text" id="index-text">
-            <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Id venenatis a condimentum vitae. Enim ut sem viverra aliquet eget sit. Tellus integer feugiat scelerisque varius morbi enim nunc faucibus a. Adipiscing commodo elit at imperdiet dui accumsan. Amet consectetur adipiscing elit ut aliquam purus sit. Elit duis tristique sollicitudin nibh sit amet commodo. Lobortis scelerisque fermentum dui faucibus in ornare. Eu non diam phasellus vestibulum lorem. Massa sed elementum tempus egestas sed sed. Enim sit amet venenatis urna cursus eget nunc scelerisque. Consectetur lorem donec massa sapien faucibus et molestie ac. Lectus urna duis convallis convallis.
-            </p>
-        </section>
+            </div>
+            <div>
+                <section class="intro-text" id="index-text">
+                    <p>
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Id venenatis a condimentum vitae. Enim ut sem viverra aliquet eget sit. Tellus integer feugiat scelerisque varius morbi enim nunc faucibus a. Adipiscing commodo elit at imperdiet dui accumsan. Amet consectetur adipiscing elit ut aliquam purus sit. Elit duis tristique sollicitudin nibh sit amet commodo. Lobortis scelerisque fermentum dui faucibus in ornare. Eu non diam phasellus vestibulum lorem. Massa sed elementum tempus egestas sed sed. Enim sit amet venenatis urna cursus eget nunc scelerisque. Consectetur lorem donec massa sapien faucibus et molestie ac. Lectus urna duis convallis convallis.
+                    </p>
+                </section>
+            </div>
+        </div>
 
     </section>
 
