--- a/ReviewsSite/wwwroot/css/Index.css
+++ b/ReviewsSite/wwwroot/css/Index.css
@@ -7,6 +7,8 @@
 
 .section__title--index {
     color: black;
+    padding-bottom: 1em;
+    text-align: center;
 }
 
 
@@ -17,10 +19,24 @@
     background-size: cover;
 }
 
-
+.grid-2 {
+    display: grid;
+    grid-template-columns: auto auto;
+    grid-gap: 50px;
+    
+}
+@media (max-width: 1200px) {
+  .grid-2 {
+    grid-template-columns: auto;
+    grid-gap: 50px;
+  }
+  .index__img {
+      max-width: 100%;
+  }
+}
 .intro-text {
-    position: relative;
+    /* position: relative;
     margin-left: 42em;
     padding-top: 10px;
-    bottom: 400px;
+    bottom: 400px; */
 }
