--- a/ReviewsSite/Views/Home/Index.cshtml
+++ b/ReviewsSite/Views/Home/Index.cshtml
@@ -1,18 +1,8 @@
-﻿<head>
-
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-    <link rel="stylesheet" href="~/css/index.css" />
-
-
-
-</head>
+﻿<link rel="stylesheet" href="~/css/index.css" />
 <body>
-    <section class="intro" id="index">
+    <div class="intro" id="index">
         <h1 class="section__title section__title--index">
-            Welcome to my <span>Code </span><span>Blooded</span> Park Review Site
+            <span class="code">&ltCode&gt</span><span class="blood">Blooded</span> Park Review Site
         </h1>
 
         <section class="subtitle" id="subtitle">
@@ -32,6 +22,7 @@
                 </section>
             </div>
         </div>
+    </div>
 
     </section>
 
