--- a/ReviewsSite/Views/Park/Detail.cshtml
+++ b/ReviewsSite/Views/Park/Detail.cshtml
@@ -21,13 +21,29 @@
             @Html.DisplayNameFor(model => model.HasHandicapAccess)
         </dt>
         <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.HasHandicapAccess)
+            @if (Model.HasHandicapAccess)
+            {
+                <text>Yes</text>
+            }
+            else
+            {
+                <text>No</text>
+            }
+            @*@Html.DisplayFor(model => model.HasHandicapAccess)*@
         </dd>
         <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.IsDogFriendly)
         </dt>
         <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.IsDogFriendly)
+            @if (Model.IsDogFriendly)
+            {
+                <text>Yes</text>
+            }
+            else
+            {
+                <text>No</text>
+            }
+            @*@Html.DisplayFor(model => model.IsDogFriendly)*@
         </dd>
         <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.ParkType)
@@ -36,6 +52,8 @@
             @Html.DisplayFor(model => model.ParkType)
         </dd>
     </dl>
+    <hr />
+    <h4>Review</h4>
     @foreach (var r in Model.Reviews)
     {
         <dl class="row">
