--- a/ReviewsSite/Views/Shared/_Layout.cshtml
+++ b/ReviewsSite/Views/Shared/_Layout.cshtml
@@ -6,10 +6,11 @@
     <title>@ViewData["Title"] - code blooded park review</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" />
+    <link rel="stylesheet" href="~/css/layout.css" />
 </head>
 <body>
     <header>
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
+        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light border-bottom box-shadow mb-3">
             <div class="container">
                 <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">Code Blooded Park Review</a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
@@ -32,7 +33,7 @@
             </div>
         </nav>
     </header>
-    <div class="container">
+    <div class="container main-div">
         <main role="main" class="pb-3">
             @RenderBody()
         </main>
