--- a/ReviewsSite/wwwroot/css/Index.css
+++ b/ReviewsSite/wwwroot/css/Index.css
@@ -1,29 +1,34 @@
-﻿.intro {
-    margin: 0;
-    padding: 0;
-    bottom: 400px;
+﻿
+.intro {
+  padding: 25px;
 }
-
 
 .section__title--index {
-    color: black;
-    padding-bottom: 1em;
-    text-align: center;
+  color: black;
+  padding-bottom: 1em;
+  text-align: center;
 }
-
-
+.subtitle {
+    padding-bottom: 20px;
+}
 .index__img {
-    grid-area: img;
-    max-width: 650px;
-    position: relative;
-    background-size: cover;
+  grid-area: img;
+  max-width: 650px;
+  position: relative;
+  background-size: cover;
 }
-
+.code {
+    font-family: 'Source Code Pro', monospace;
+}
+.blood {
+    font-family: 'Nosifer', cursive;
+    color: darkred;
+    text-shadow: 2px 2px black;
+}
 .grid-2 {
-    display: grid;
-    grid-template-columns: auto auto;
-    grid-gap: 50px;
-    
+  display: grid;
+  grid-template-columns: auto auto;
+  grid-gap: 50px;
 }
 @media (max-width: 1200px) {
   .grid-2 {
@@ -31,11 +36,11 @@
     grid-gap: 50px;
   }
   .index__img {
-      max-width: 100%;
+    max-width: 100%;
   }
 }
 .intro-text {
-    /* position: relative;
+  /* position: relative;
     margin-left: 42em;
     padding-top: 10px;
     bottom: 400px; */
