--- a/ReviewsSite/Views/Review/Index.cshtml
+++ b/ReviewsSite/Views/Review/Index.cshtml
@@ -9,7 +9,7 @@
 <p>
     <a asp-action="Create">Create New</a>
 </p>
-<p>@ViewBag.Result</p>
+<h4 class="result">@ViewBag.Result</h4>
 <table class="table">
     <thead>
         <tr>
