--- a/ReviewsSite/Views/Park/Detail.cshtml
+++ b/ReviewsSite/Views/Park/Detail.cshtml
@@ -51,6 +51,12 @@
         <dd class="col-sm-10">
             @Html.DisplayFor(model => model.ParkType)
         </dd>
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.AverageRating)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.AverageRating)
+        </dd>
     </dl>
     <hr />
     <h4>Review</h4>
