--- a/ReviewsSite/Views/Review/Create.cshtml
+++ b/ReviewsSite/Views/Review/Create.cshtml
@@ -31,7 +31,10 @@
             </div>
             <div class="form-group">
                 <label asp-for="StarRating" class="control-label"></label>
-                <input asp-for="StarRating" class="form-control" />
+                <div class="stars">
+
+                </div>
+                <input asp-for="StarRating" class="form-control starRating" type="hidden" />
                 <span asp-validation-for="StarRating" class="text-danger"></span>
             </div>
             <div class="form-group">
