Add stars to review edit. Change page titles.

--- a/ReviewsSite/Views/Home/Index.cshtml
+++ b/ReviewsSite/Views/Home/Index.cshtml
@@ -1,4 +1,7 @@
-﻿<link rel="stylesheet" href="~/css/index.css" />
+﻿@{
+    ViewData["Title"] = "Home";
+}
+<link rel="stylesheet" href="~/css/index.css" />
 <body>
     <div class="intro" id="index">
         <h1 class="section__title section__title--index">
