--- a/ReviewsSite/Views/Park/Delete.cshtml
+++ b/ReviewsSite/Views/Park/Delete.cshtml
@@ -1,7 +1,7 @@
 ﻿@model ReviewsSite.Models.Park
 
 @{
-    ViewData["Title"] = "Delete";
+    ViewData["Title"] = "Delete Park";
 }
 
 <h1>Delete</h1>
