--- a/ReviewsSite/Views/Park/Index.cshtml
+++ b/ReviewsSite/Views/Park/Index.cshtml
@@ -1,26 +1,29 @@
 ﻿@model IEnumerable<ReviewsSite.Models.Park>
+@{
+    ViewData["Title"] = "Parks";
+}
 
 
 <h1>Parks</h1>
 
 <p>@ViewBag.Result</p>
-    <table class="table">
-        <thead>
-            <tr>
-                <th>
-                    Park Number
-                </th>
-                <th>
-                    @Html.DisplayNameFor(model => model.Name)
-                </th>
-                <th>
-                    Average Rating
-                </th>
-            </tr>
-        </thead>
-        <tbody>
-            @foreach (var item in Model)
-            {
+<table class="table">
+    <thead>
+        <tr>
+            <th>
+                Park Number
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Name)
+            </th>
+            <th>
+                Average Rating
+            </th>
+        </tr>
+    </thead>
+    <tbody>
+        @foreach (var item in Model)
+        {
             <tr>
                 <td>
                     @Html.DisplayFor(modelItem => item.Id)
@@ -29,18 +32,18 @@
                     @Html.DisplayFor(modelItem => item.Name)
                 </td>
                 <td>
-                   @item.AverageRating
+                    @item.AverageRating
                 </td>
                 @*<td>
-            <a href="/Park/Edit/@item.Id">Edit</a>
-        </td>*@
+                        <a href="/Park/Edit/@item.Id">Edit</a>
+                    </td>*@
                 <td>
                     <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
                     <a asp-action="Detail" asp-route-id="@item.Id">Details</a> |
                     <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
                 </td>
             </tr>
-            }
-        </tbody>
-    </table>
+        }
+    </tbody>
+</table>
 <a href="/Park/Create">Create New</a>
