--- a/ReviewsSite/Views/Review/Details.cshtml
+++ b/ReviewsSite/Views/Review/Details.cshtml
@@ -1,7 +1,7 @@
 ﻿@model ReviewsSite.Models.Review
 
 @{
-    ViewData["Title"] = "Details";
+    ViewData["Title"] = "Review Detail";
 }
 
 <h1>Details</h1>
