--- a/ReviewsSite/Views/Park/Edit.cshtml
+++ b/ReviewsSite/Views/Park/Edit.cshtml
@@ -2,7 +2,7 @@
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 
 @{
-    ViewData["Title"] = "Edit";
+    ViewData["Title"] = "Edit Park Detail";
 }
 
 <!DOCTYPE html>
