--- a/ReviewsSite/Views/Review/Delete.cshtml
+++ b/ReviewsSite/Views/Review/Delete.cshtml
@@ -1,7 +1,7 @@
 ﻿@model ReviewsSite.Models.Review
 
 @{
-    ViewData["Title"] = "Delete";
+    ViewData["Title"] = "Delete Review";
 }
 
 <h1>Delete</h1>
