--- a/ReviewsSite/Views/Review/Index.cshtml
+++ b/ReviewsSite/Views/Review/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@model IEnumerable<ReviewsSite.Models.Review>
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Reviews";
 }
 
 <h1>Reviews</h1>
