added park description

--- a/ReviewsSite/Views/Park/Edit.cshtml
+++ b/ReviewsSite/Views/Park/Edit.cshtml
@@ -42,6 +42,11 @@
                     <span asp-validation-for="ParkType" class="text-danger"></span>
                 </div>
                 <div class="form-group">
+                    <label asp-for="ParkDescription" class="control-label"></label>
+                    <input asp-for="ParkDescription" class="form-control" />
+                    <span asp-validation-for="ParkDescription" class="text-danger"></span>
+                </div>
+                <div class="form-group">
                     <input type="submit" value="Save" class="btn btn-primary" />
                 </div>
             </form>
