Fix search and filter function. Add render section to layout. CHanged css link in park index to render section

--- a/ReviewsSite/Views/Home/Index.cshtml
+++ b/ReviewsSite/Views/Home/Index.cshtml
@@ -1,7 +1,10 @@
 ﻿@{
     ViewData["Title"] = "Home";
 }
-<link rel="stylesheet" href="~/css/index.css" />
+@section Styles{ 
+<link rel="stylesheet" href="/css/Index.css" />
+}
+
 <body>
     <div class="intro" id="index">
         <h1 class="section__title section__title--index">
