--- a/ReviewsSite/Views/Shared/_Layout.cshtml
+++ b/ReviewsSite/Views/Shared/_Layout.cshtml
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" />
     <link rel="stylesheet" href="~/css/layout.css" />
+    @RenderSection("Styles", required: false)
 </head>
 <body class="@ViewData["Title"]">
     <header>
