fixed create park error

--- a/ReviewsSite/Views/Park/Create.cshtml
+++ b/ReviewsSite/Views/Park/Create.cshtml
@@ -35,7 +35,8 @@
             </div>
             <div class="form-group">
                 <label asp-for="ParkDescription" class="control-label"></label>
-                <input asp-for="ParkDescription" class="form-control" />
+                @*<input asp-for="ParkDescription" class="form-control" />*@
+                <textarea asp-for="ParkDescription" class="form-control"></textarea>
                 <span asp-validation-for="ParkDescription" class="text-danger"></span>
             </div>
             <div class="form-group">
