--- a/ReviewsSite/Views/Park/Index.cshtml
+++ b/ReviewsSite/Views/Park/Index.cshtml
@@ -21,13 +21,13 @@
     <thead>
         <tr>
             <th>
-                @Html.ActionLink("Park Number", "Index", new { sortOrder = ViewBag.IdSortParm, searchString = ViewBag.SearchString })  
+                @Html.ActionLink("Park Number", "Index", new { sortOrder = ViewBag.IdSortParm, searchString = ViewBag.SearchString, isDogFriendly = ViewBag.isDogFriendly, hasHandicapAccess = ViewBag.hasHandicapAccess })  
             </th>
             <th>
-                @Html.ActionLink(@Html.DisplayNameFor(model => model.Name), "Index", new { sortOrder = ViewBag.NameSortParm, searchString = ViewBag.SearchString }) 
+                @Html.ActionLink(@Html.DisplayNameFor(model => model.Name), "Index", new { sortOrder = ViewBag.NameSortParm, searchString = ViewBag.SearchString, isDogFriendly = ViewBag.isDogFriendly, hasHandicapAccess = ViewBag.hasHandicapAccess }) 
             </th>
             <th>
-                @Html.ActionLink("Average Rating", "Index", new { sortOrder = ViewBag.RatingSortParm, searchString = ViewBag.SearchString })            
+                @Html.ActionLink("Average Rating", "Index", new { sortOrder = ViewBag.RatingSortParm, searchString = ViewBag.SearchString, isDogFriendly = ViewBag.isDogFriendly, hasHandicapAccess = ViewBag.hasHandicapAccess })            
             </th>
         </tr>
     </thead>
