--- a/ReviewsSite/Views/Review/Create.cshtml
+++ b/ReviewsSite/Views/Review/Create.cshtml
@@ -26,7 +26,8 @@
             </div>
             <div class="form-group">
                 <label asp-for="Comment" class="control-label"></label>
-                <input asp-for="Comment" class="form-control" />
+                @*<input asp-for="Comment" class="form-control" />*@
+                <textarea asp-for="Comment" class="form-control"></textarea>
                 <span asp-validation-for="Comment" class="text-danger"></span>
             </div>
             <div class="form-group">
