--- a/ReviewsSite/Views/Home/Index.cshtml
+++ b/ReviewsSite/Views/Home/Index.cshtml
@@ -23,7 +23,10 @@
             <div>
                 <section class="intro-text" id="index-text">
                     <p>
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Id venenatis a condimentum vitae. Enim ut sem viverra aliquet eget sit. Tellus integer feugiat scelerisque varius morbi enim nunc faucibus a. Adipiscing commodo elit at imperdiet dui accumsan. Amet consectetur adipiscing elit ut aliquam purus sit. Elit duis tristique sollicitudin nibh sit amet commodo. Lobortis scelerisque fermentum dui faucibus in ornare. Eu non diam phasellus vestibulum lorem. Massa sed elementum tempus egestas sed sed. Enim sit amet venenatis urna cursus eget nunc scelerisque. Consectetur lorem donec massa sapien faucibus et molestie ac. Lectus urna duis convallis convallis.
+                        Over the last year, the pandemic has forced many northeast Ohio residents to find new ways to socialize in outdoor spaces.  For others, getting outside is just a way of life. The parks across the Greater Cleveland area a prime meeting point for the new and frequent visitors.  What has been missing is an application that can help park goers know which park is the best on for them.  To address the need to have a local rating and review platform for Greater Clevelanders to know which park is best for them, Team Code Blooded has created a comprehensive park review website that allows your neighbors to tell you the best parks to frequent during the year.
+                    </p>
+                    <p>
+                        On this site, the user will be able to write about their experiences at local parks and give that park a star rating.  If you know which park you are looking for you can search that park and see what other have said about the park as well as where that park rates among other parks.  Users can search for parks that are ideal for their furry friends or how accessible a park is for people with disabilities.  Try our app and let everyone know which park is the most <strong>&ltCode&gt Blooded</strong>.
                     </p>
                 </section>
             </div>
