--- a/ReviewsSite/wwwroot/css/Index.css
+++ b/ReviewsSite/wwwroot/css/Index.css
@@ -13,7 +13,7 @@
 }
 .index__img {
   grid-area: img;
-  max-width: 650px;
+  max-width: 100%;
   position: relative;
   background-size: cover;
 }
@@ -28,8 +28,11 @@
 }
 .grid-2 {
   display: grid;
-  grid-template-columns: auto auto;
+  grid-template-columns: 45% 45%;
   grid-gap: 50px;
+}
+.grid-content {
+    margin: auto 0;
 }
 @media (max-width: 1200px) {
   .grid-2 {
