--- a/ReviewsSite/wwwroot/css/Index.css
+++ b/ReviewsSite/wwwroot/css/Index.css
@@ -16,6 +16,7 @@
   max-width: 100%;
   position: relative;
   background-size: cover;
+  border-radius: 15px;
 }
 .code {
     font-family: 'Source Code Pro', monospace;
